force-app/main/default/objects/PWChrono_Settings__mdt/PWChrono_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Global configuration settings for PWChrono system that can be customized per organization</description>
    <label>PWChrono Settings</label>
    <pluralLabel>PWChrono Settings</pluralLabel>
</CustomObject>