force-app/main/default/objects/PWChrono_Settings__mdt/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <defaultValue>&quot;USD&quot;</defaultValue>
    <description>Default currency code for salary and financial calculations</description>
    <label>Default Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>