force-app/main/default/objects/PWChrono_Settings__mdt/fields/Default_Grace_Period_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Default_Grace_Period_Minutes__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Default grace period in minutes for late arrivals</description>
    <label>Default Grace Period (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>