force-app/main/default/objects/PWChrono_Settings__mdt/fields/Max_Consecutive_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Consecutive_Leave_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description
  >Maximum number of consecutive leave days allowed in single application (0 = unlimited)</description>
    <label>Max Consecutive Leave Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>