force-app/main/default/objects/PWChrono_Settings__mdt/fields/Probation_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Probation_Period_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Default probation period duration in days for new employees</description>
    <label>Probation Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>