force-app/main/default/objects/PWChrono_Settings__mdt/fields/Standard_Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Standard_Working_Hours__c</fullName>
    <defaultValue>8.00</defaultValue>
    <description>Standard working hours per day</description>
    <label>Standard Working Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>