force-app/main/default/objects/PWChrono_Settings__mdt/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <defaultValue>&quot;America/New_York&quot;</defaultValue>
    <description
  >Default time zone for attendance and time tracking</description>
    <label>Organization Time Zone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>