force-app/main/default/objects/PWChrono_Settings__mdt/fields/Weekend_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Day_1__c</fullName>
    <description>First weekend day (e.g., Saturday, Friday)</description>
    <label>Weekend Day 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
                <default>true</default>
                <label>Sunday</label>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>