force-app/main/default/objects/PWChrono_Settings__mdt/fields/Weekend_Day_2__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Day_2__c</fullName>
    <description>Second weekend day (leave empty for single day weekend)</description>
    <label>Weekend Day 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
                <default>true</default>
                <label>Saturday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>