force-app/main/default/objects/PWChrono_Settings__mdt/fields/Working_Days_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_Per_Week__c</fullName>
    <defaultValue>5</defaultValue>
    <description
  >Number of working days in a week (typically 5 or 6)</description>
    <label>Working Days Per Week</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>